--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -340,7 +340,7 @@ jobs:
           echo "::set-output name=domain-name::$DOMAIN_NAME"
 
       # This is commented out because running Route53 for trv is still causing an error.
-      # A ticket to address this issue has been made into a ticket: BIOMAGE-2314. Refer to the ticket for more information.
+      # A ticket to address this issue has been made: BIOMAGE-2314. Refer to the ticket for more information.
       # - id: deploy-route53
       #   name: Deploy Route 53 DNS records to ELB
       #   uses: aws-actions/aws-cloudformation-github-deploy@v1
