--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -279,32 +279,18 @@ jobs:
       #       --override-existing-serviceaccounts \
       #       --approve
 
-      - id: platform-public-facing
-        name: Get config for whether platform should be public facing
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq '.[env(ENVIRONMENT_NAME)].publicFacing' 'infra/config/github-environments-config.yaml'
-        env:
-          ENVIRONMENT_NAME: ${{ matrix.environment-name }}
-
       # we need to retry this due to an active issue with the AWS Load Balancer Controller
       # where there are intermittent failures that are only fixable by retrying
       # see issue at https://github.com/kubernetes-sigs/aws-load-balancer-controller/issues/2071
-      - id: install-lbc
-        name: Deploy AWS Load Balancer Controller
-        uses: nick-invision/retry@v2
-        with:
-          timeout_seconds: 600
-          max_attempts: 20
-          retry_on: error
-          on_retry_command: sleep $(shuf -i 5-15 -n 1)
-          command: |-
-            # Check that publicFacing is set to true or false
-            if [ "${{ steps.platform-public-facing.outputs.result }}" != "true" || "${{ steps.platform-public-facing.outputs.result }}" != "false" ]; then
-              echo "value of publicFacing in infra/config/github-environments-config.yaml is not set to true or false"
-              exit 1
-            fi
-
+      # - id: install-lbc
+      #   name: Deploy AWS Load Balancer Controller
+      #   uses: nick-invision/retry@v2
+      #   with:
+      #     timeout_seconds: 600
+      #     max_attempts: 20
+      #     retry_on: error
+      #     on_retry_command: sleep $(shuf -i 5-15 -n 1)
+      #     command: |-
       #       helm repo add eks https://aws.github.io/eks-charts
       #       kubectl apply -k "github.com/aws/eks-charts/stable/aws-load-balancer-controller//crds?ref=master"
       #       helm repo update
@@ -314,14 +300,34 @@ jobs:
       #         --set serviceAccount.name=aws-load-balancer-controller \
       #         --set clusterName=biomage-$CLUSTER_ENV \
       #         --install --wait
-      #       # this is needed so SNS does not stop trying to subscribe to not-yet-deployed
-      #       # API staging environments because their endpoints are not yet available.
-      #       helm upgrade aws-elb-503-subscription-endpoint infra/aws-elb-503-subscription-endpoint \
-      #         --namespace default \
-      #         --set clusterEnv=$CLUSTER_ENV \
-      #         --set acmCertificate=${{ secrets.ACM_CERTIFICATE_ARN }} \
-      #         --set publicFacing=${{ steps.platform-public-facing.outputs.result }} \
-      #         --install --wait
+
+      - id: platform-public-facing
+        name: Get config for whether platform should be public facing
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq '.[env(ENVIRONMENT_NAME)].publicFacing' 'infra/config/github-environments-config.yaml'
+        env:
+          ENVIRONMENT_NAME: ${{ matrix.environment-name }}
+
+      - id: install-elb-503-subscription-endpoint
+        name: Install ELB 503 subscription endpoint
+        run: |-
+            # Check that publicFacing is set to true or false
+            if [ "$PUBLIC_FACING" != "true" || "$PUBLIC_FACING" != "false" ]; then
+              echo "value of publicFacing in infra/config/github-environments-config.yaml is not set to true or false"
+              exit 1
+            fi
+
+            # this is needed so SNS does not stop trying to subscribe to not-yet-deployed
+            # API staging environments because their endpoints are not yet available.
+            helm upgrade aws-elb-503-subscription-endpoint infra/aws-elb-503-subscription-endpoint \
+              --namespace default \
+              --set clusterEnv=$CLUSTER_ENV \
+              --set acmCertificate=${{ secrets.ACM_CERTIFICATE_ARN }} \
+              --set publicFacing=$PUBLIC_FACING \
+              --install --wait
+        env:
+          PUBLIC_FACING=${{ steps.platform-public-facing.outputs.result }}
 
       # - id: deploy-env-loadbalancer
       #   name: Deploy AWS Application Load Balancer for environment
