--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -324,7 +324,7 @@ jobs:
               --namespace default \
               --set clusterEnv=$CLUSTER_ENV \
               --set acmCertificate=${{ secrets.ACM_CERTIFICATE_ARN }} \
-              --set publicFacing=$PUBLIC_FACING \
+              --set publicFacing="$PUBLIC_FACING" \
               --install --wait
         env:
           PUBLIC_FACING: ${{ steps.platform-public-facing.outputs.result }}
