--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -318,6 +318,8 @@ jobs:
               exit 1
             fi
 
+            echo "value of publicFacing: $PUBLIC_FACING"
+
             # this is needed so SNS does not stop trying to subscribe to not-yet-deployed
             # API staging environments because their endpoints are not yet available.
             helm upgrade aws-elb-503-subscription-endpoint infra/aws-elb-503-subscription-endpoint \
