--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -331,6 +331,11 @@ jobs:
         env:
           PUBLIC_FACING: ${{ steps.platform-public-facing.outputs.result }}
 
+      - id: this-step-should-not-run-if-fail
+        name: Step should not run
+        run: |-
+          echo "This step should not run"
+
       # - id: deploy-env-loadbalancer
       #   name: Deploy AWS Application Load Balancer for environment
       #   uses: aws-actions/aws-cloudformation-github-deploy@v1
