--- a/infra/config/account-config.yaml
+++ b/infra/config/account-config.yaml
@@ -8,4 +8,5 @@ myAccount:
   selfSignedCertificate: FILLED_IN_BY_CI
   datadogEnabled: FILLED_IN_BY_CI
   datadogApiKey: FILLED_IN_BY_CI
+  datadogAppKey: FILLED_IN_BY_CI
   #FILLED IN BY IAC CI
