--- a/charts/nodejs/templates/deployment.yaml
+++ b/charts/nodejs/templates/deployment.yaml
@@ -77,6 +77,14 @@ spec:
         - name: DOMAIN_NAME
           value: {{ .Values.myAccount.domainName | quote }}
 
+{{- if eq .Values.myAccount.datadogEnabled "true" }}
+        - name: DD_API_KEY
+          value: {{ .Values.myAccount.datadogApiKey | quote }}
+
+        - name: DD_APP_KEY
+          value:  {{ .Values.myAccount.datadogAppKey | quote }}
+{{- end }}
+
 {{- if eq .Values.myAccount.selfSignedCertificate "true" }}
         - name: NODE_TLS_REJECT_UNAUTHORIZED
           value:  "0"
