--- a/cf/batch.yaml
+++ b/cf/batch.yaml
@@ -54,8 +54,7 @@ Resources:
       JobDefinitionName: !Sub "job-pipeline-${Environment}"
       ContainerProperties:
         Command:
-          - Rscript
-          - init.R
+          - ./start-batch.sh
         Image: !Sub "242905224710.dkr.ecr.eu-west-1.amazonaws.com/pipeline:batch-${Environment}"
         ResourceRequirements:
           - Type: VCPU
