--- a/.github/workflows/deploy-monitoring.yaml
+++ b/.github/workflows/deploy-monitoring.yaml
@@ -36,7 +36,7 @@ jobs:
         run: |-
           echo "Datadog-enabled envs '${{ steps.get-datadog-enabled-envs.outputs.result }}'"
 
-  check-environment-secrets:
+  check-secrets:
     name: Check that sufficient secrets are specified for environment name
     runs-on: ubuntu-20.04
     needs: set-environments
