--- a/.github/workflows/deploy-monitoring.yaml
+++ b/.github/workflows/deploy-monitoring.yaml
@@ -23,13 +23,13 @@ jobs:
         name: Filter environments
         uses: mikefarah/yq@master
         with:
-          cmd: yq 'keys' github-env.yaml -o json
+          cmd: yq 'keys' infra/config/github-environments-config.yaml -o json
 
       - id: get-datadog-enabled-envs
         name: Filter environments
         uses: mikefarah/yq@master
         with:
-          cmd: yq 'with_entries(select(.value.monitoringEnabled)) | keys' github-env.yaml -o json
+          cmd: yq 'with_entries(select(.value.monitoringEnabled)) | keys' infra/config/github-environments-config.yaml -o json
 
       - id: test-datadog-enabled-envs
         name: Test Datadog enabled envs
