--- a/.github/workflows/deploy-monitoring.yaml
+++ b/.github/workflows/deploy-monitoring.yaml
@@ -46,10 +46,6 @@ jobs:
       max-parallel: 1
       matrix:
         environment-name: ${{ fromJson(needs.set-environments.outputs.all-envs) }}
-        environment-type: [production]
-        include:
-          - environment-name: Biomage
-            environment-type: staging
     environment: ${{ matrix.environment-name }}
     steps:
       - id: check-secrets
@@ -92,10 +88,10 @@ jobs:
       max-parallel: 1
       matrix:
         environment-name: ${{ fromJson(needs.set-environments.outputs.all-envs) }}
-        environment-type: [production]
-        include:
-          - environment-name: Biomage
-            environment-type: staging
+        environment-type: [staging, production]
+        exclude:
+          - environment-name: trv
+            environment-type: production
     environment: ${{ matrix.environment-name }}
     steps:
       - id: checkout
@@ -201,10 +197,10 @@ jobs:
       max-parallel: 1
       matrix:
         environment-name: ${{ fromJson(needs.set-environments.outputs.datadog-envs) }}
-        environment-type: [production]
-        include:
-          - environment-name: Biomage
-            environment-type: staging
+        environment-type: [staging, production]
+        exclude:
+          - environment-name: trv
+            environment-type: production
     environment: ${{ matrix.environment-name }}
     steps:
       - id: check-datadog-secrets
