test disabled monitoring should be skipped

--- a/infra/config/github-environments-config.yaml
+++ b/infra/config/github-environments-config.yaml
@@ -4,5 +4,5 @@ Biomage:
   selfSignedCertificate: false
 trv:
   publicFacing: false
-  monitoringEnabled: true
+  monitoringEnabled: false
   selfSignedCertificate: true
