revert trv monitoring settings

--- a/infra/config/github-environments-config.yaml
+++ b/infra/config/github-environments-config.yaml
@@ -4,5 +4,5 @@ Biomage:
   selfSignedCertificate: false
 trv:
   publicFacing: false
-  monitoringEnabled: false
+  monitoringEnabled: true
   selfSignedCertificate: true
